# sfews-ethiopia

./: .env.example  .gitignore  README.md  SFEWS_Agent_Context.md  package.json  render.yaml  setup.ps1
backend/: .dockerignore  .env.example  Dockerfile  LLM_AGENT_PLAN.md  README.md  init_db.py  main.py  package.json  pyproject.toml  requirements.txt  schema.sql  search_auth.py  search_chat.py  search_chat_relaxed.py  search_frontend_chat.py  search_navitems.py  search_references.py  search_tabs.py
backend/app/: database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: __init__.py  auth.py  chat.py  dashboard.py  nodes.py  system.py  telemetry.py  ws.py
backend/app/services/: dashboard.py  ml.py  websocket.py
backend/app/services/agent/: __init__.py  llm_client.py  orchestrator.py  tools.py
backend/simulator/: run_simulation.py  simple_sensor.py
database/: schema.sql
firmware/sfews_esp32_firmware/: sfews_esp32_firmware.ino
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  App.tsx  App_clean.tsx  index.css
frontend/src/components/: AlertsPanel.tsx  CircuitMetrics.tsx  DashboardTab.tsx  FluidChart.tsx  GeographicMap.tsx  IoTPanel.tsx  LoginPanel.tsx  MapTab.tsx  ReportsPanel.tsx  SettingsPanel.tsx  SimpleSimPanel.tsx  WaterLevelsPanel.tsx  WeatherPanel.tsx
frontend/src/types/: index.ts  types.ts
frontend/src/utils/: simulation.ts
ml-research/: train_flood_model.py
