[project]
name = "sfews-backend"
version = "0.1.0"
description = "SFEWS Backend Command Center API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "psycopg2-binary",
    "pydantic",
    "python-dotenv",
    "requests",
    "sqlalchemy",
    "uvicorn",
    "openai>=1.63.2",
    "httpx>=0.28.1",
    "websockets",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
]


[tool.uv]
package = false
